--- a/pinyougou-parent/pinyougou-manager-web/pom.xml
+++ b/pinyougou-parent/pinyougou-manager-web/pom.xml
@@ -10,7 +10,7 @@
   
   <dependencies>
     <!-- Spring -->
-	<dependency>
+	  <dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-context</artifactId>
 	</dependency>
@@ -102,6 +102,11 @@
 		<artifactId>pinyougou-common</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
+	  <dependency>
+		  <groupId>org.apache.activemq</groupId>
+		  <artifactId>activemq-client</artifactId>
+		  <version>5.13.4</version>
+	  </dependency>
   </dependencies>
   
   
